fixed container connections

--- a/django_server/.env.development
+++ b/django_server/.env.development
@@ -1,7 +1,9 @@
 SECRET_KEY = "django-insecure-7dkx6*gdn=ym*iouz*-6m#616-1k^jpp8okuat&wr-+3x%)68+"
-DEBUG = "True"
+DEBUG = "true"
+DOCKER = "true"
 DATABASE_USERNAME = "admin"
 DATABASE_PASSWORD = "password"
 DATABASE_NAME = "chatbot"
 DATABASE_PORT = "27017"
+LOCAL_DATABASE_HOST = "mongodb://${DATABASE_USERNAME}:${DATABASE_PASSWORD}@localhost:${DATABASE_PORT}/?retryWrites=true&w=majority&appName=${DATABASE_NAME}"
 DATABASE_HOST = "mongodb://${DATABASE_USERNAME}:${DATABASE_PASSWORD}@mongodb:${DATABASE_PORT}/?retryWrites=true&w=majority&appName=${DATABASE_NAME}"
