--- a/django_server/.env
+++ b/django_server/.env
@@ -5,4 +5,4 @@ DATABASE_PASSWORD = "password"
 DATABASE_NAME = "chatbot"
 DATABASE_PORT = "27017"
 LOCAL_DATABASE_HOST = "mongodb://${DATABASE_USERNAME}:${DATABASE_PASSWORD}@localhost:${DATABASE_PORT}/?retryWrites=true&w=majority&appName=${DATABASE_NAME}"
-DATABASE_HOST = "mongodb://${DATABASE_USERNAME}:${DATABASE_PASSWORD}@mongodb:${DATABASE_PORT}/?retryWrites=true&w=majority&appName=${DATABASE_NAME}"
+DOCKER_DATABASE_HOST = "mongodb://${DATABASE_USERNAME}:${DATABASE_PASSWORD}@mongodb:${DATABASE_PORT}/?retryWrites=true&w=majority&appName=${DATABASE_NAME}"
