--- a/django_server/.env.example
+++ b/django_server/.env.example
@@ -4,4 +4,6 @@ DATABASE_USERNAME="admin"
 DATABASE_PASSWORD="password"
 DATABASE_NAME="chatbot"
 DATABASE_PORT="27017"
+MONGO_CONTAINER_NAME="mongodb"
 LOCAL_DATABASE_HOST="mongodb://${DATABASE_USERNAME}:${DATABASE_PASSWORD}@localhost:${DATABASE_PORT}/?retryWrites=true&w=majority&appName=${DATABASE_NAME}"
+DOCKER_DATABASE_HOST="mongodb://${DATABASE_USERNAME}:${DATABASE_PASSWORD}@${MONGO_CONTAINER_NAME}/?retryWrites=true&w=majority&appName=${DATABASE_NAME}"
