--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "@nuxt/types": "^2.18.1",
     "@nuxtjs/color-mode": "^3.4.2",
     "@pinia/nuxt": "^0.5.1",
+    "@radya/nuxt-dompurify": "^1.0.5",
     "@types/node": "^20.14.9",
     "@typescript-eslint/eslint-plugin": "^7.16.0",
     "@unocss/eslint-plugin": "^0.61.3",
@@ -35,6 +36,7 @@
     "vue": "^3.4.31",
     "vue-router": "^4.4.0",
     "vue-tsc": "^1.8.27",
-    "vuetify": "^3.6.10"
+    "vuetify": "^3.6.10",
+    "websockets": "^0.2.0"
   }
 }
