--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,5 +1,5 @@
 # Stage 1: Build Stage
-FROM node:18 AS builder
+FROM node:22-slim AS builder
 
 # Set working directory
 WORKDIR /app
@@ -17,7 +17,7 @@ COPY . .
 RUN npm run build
 
 # Stage 2: Production Stage
-FROM node:18-alpine
+FROM node:22-alpine
 
 # Set working directory
 WORKDIR /app
@@ -26,7 +26,7 @@ WORKDIR /app
 COPY --from=builder /app/.output ./.output
 
 # Set the environment variable
-ENV DOCKER "true"
+ENV DOCKER=true
 
 # Expose the port
 EXPOSE 3000
