--- a/django_server/Dockerfile
+++ b/django_server/Dockerfile
@@ -1,26 +1,38 @@
-# Use the official Python image from the Docker Hub
-FROM python:3.13.3-alpine
+# Use Python Alpine for smaller image size
+FROM python:3.13.3-alpine AS base
 
-# Set the working directory in the container
+# Install system dependencies needed for Python packages
+RUN apk add --no-cache \
+    gcc \
+    musl-dev \
+    libffi-dev \
+    postgresql-dev \
+    && rm -rf /var/cache/apk/*
+
+# Set working directory
 WORKDIR /app
 
-# Copy the requirements file into the container
+# Copy requirements first for better caching
 COPY requirements.txt .
 
-# Install the dependencies
-RUN pip install --no-cache-dir -r requirements.txt
+# Upgrade pip and install Python dependencies
+RUN pip install --no-cache-dir --upgrade pip && \
+    pip install --no-cache-dir -r requirements.txt
 
-# Copy the rest of the application code into the container
+# Copy application code
 COPY . .
+
+# Set Python environment variables
+ENV PYTHONPATH=/app \
+    PYTHONUNBUFFERED=1 \
+    PYTHONDONTWRITEBYTECODE=1 \
+    DOCKER=true
 
 # Replace the context in the djongo/models/fields.py file
 RUN python replace_context.py
 
-# Set the environment variable
-ENV DOCKER=true
-
-# Expose the port the application runs on
+# Expose port
 EXPOSE 8000
 
-# Specify the command to run the application
+# Run the application
 CMD ["sh", "-c", "python manage.py makemigrations && python manage.py migrate && python manage.py runserver 0.0.0.0:8000"]
